pass2Parser.java
// Generated from pass2.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pass2Parser extends Parser {
	
	
        protected String nameFunction="";
        protected String className ="";
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, LINECOMMENT=2, COMMENT=3, INTEGER=4, INHERITS=5, CLASS=6, 
		LET=7, MULTI=8, DIVID=9, ADD=10, SUB=11, ASSIGN=12, TRUE=13, FALSE=14, 
		DOUBLE_COT=15, OPENP=16, CLOSEP=17, NOT_FLAG=18, EQUAL=19, LESS_EQUAL=20, 
		LESS=21, NOT=22, ISVOID=23, NEW=24, START_CASE=25, END_CASE=26, OF=27, 
		BIGER_EQUAL=28, IN=29, WHILE=30, START_LOOP=31, END_LOOP=32, START_IF=33, 
		END_IF=34, ELSE=35, THEN=36, OPENA=37, CLOSEA=38, SEM=39, COM=40, DOTS=41, 
		DOT=42, AT=43, STRING=44, ID=45, TYPE=46;
	public static final String[] tokenNames = {
		"<INVALID>", "WHITESPACE", "LINECOMMENT", "COMMENT", "INTEGER", "INHERITS", 
		"CLASS", "LET", "'*'", "'/'", "'+'", "'-'", "'<-'", "TRUE", "FALSE", "'\"'", 
		"'('", "')'", "NOT_FLAG", "'='", "'<='", "'<'", "'~'", "ISVOID", "NEW", 
		"START_CASE", "END_CASE", "OF", "'=>'", "IN", "WHILE", "START_LOOP", "END_LOOP", 
		"START_IF", "END_IF", "ELSE", "THEN", "'{'", "'}'", "';'", "','", "':'", 
		"'.'", "'@'", "STRING", "ID", "TYPE"
	};
	public static final int
		RULE_program = 0, RULE_classdef = 1, RULE_feature = 2, RULE_formal = 3, 
		RULE_expr = 4, RULE_t = 5, RULE_a = 6, RULE_aa = 7, RULE_b = 8, RULE_bb = 9, 
		RULE_c = 10, RULE_cc = 11, RULE_f = 12, RULE_z = 13, RULE_d = 14, RULE_g = 15, 
		RULE_e = 16;
	public static final String[] ruleNames = {
		"program", "classdef", "feature", "formal", "expr", "t", "a", "aa", "b", 
		"bb", "c", "cc", "f", "z", "d", "g", "e"
	};

	@Override
	public String getGrammarFileName() { return "pass2.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pass2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassdefContext classdef(int i) {
			return getRuleContext(ClassdefContext.class,i);
		}
		public List<ClassdefContext> classdef() {
			return getRuleContexts(ClassdefContext.class);
		}
		public TerminalNode SEM(int i) {
			return getToken(pass2Parser.SEM, i);
		}
		public List<TerminalNode> SEM() { return getTokens(pass2Parser.SEM); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
                
		if(MainProgram.error){
			System.out.println("  ----> ERROR in pass1! <----  ");
			return null;
		}

		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			//System.out.println("1-");
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(35); classdef();
				setState(36); match(SEM);
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
//			System.out.println("InheritanceGraph:");
			
//			System.out.println("****MainSymbolTable****");
//			MainProgram.MainSymbolTable.printSymbolTable();
//			System.out.println("***********************");
			
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdefContext extends ParserRuleContext {
		public Token m;
		public Token n;
		public TerminalNode CLOSEA() { return getToken(pass2Parser.CLOSEA, 0); }
		public List<TerminalNode> TYPE() { return getTokens(pass2Parser.TYPE); }
		public TerminalNode OPENA() { return getToken(pass2Parser.OPENA, 0); }
		public TerminalNode SEM(int i) {
			return getToken(pass2Parser.SEM, i);
		}
		public List<TerminalNode> SEM() { return getTokens(pass2Parser.SEM); }
		public TerminalNode TYPE(int i) {
			return getToken(pass2Parser.TYPE, i);
		}
		public TerminalNode INHERITS() { return getToken(pass2Parser.INHERITS, 0); }
		public TerminalNode CLASS() { return getToken(pass2Parser.CLASS, 0); }
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public ClassdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).enterClassdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).exitClassdef(this);
		}
	}

	public final ClassdefContext classdef() throws RecognitionException {
		ClassdefContext _localctx = new ClassdefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
//			System.out.println("2");
			setState(45); match(CLASS);
			setState(46); ((ClassdefContext)_localctx).m = match(TYPE);
                        className = ((ClassdefContext)_localctx).m.getText();
			setState(49);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(47); match(INHERITS);
				setState(48); ((ClassdefContext)_localctx).n = match(TYPE);
				}
			}

			setState(51); match(OPENA);
                        ///////////
                        MainProgram.getRuntimeSymbolTable().enterClass(((ClassdefContext)_localctx).m.getText() );
                        
                        //////
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(52); feature();
				setState(53); match(SEM);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60); match(CLOSEA);
//			System.out.println("class defenition: "+((ClassdefContext)_localctx).m.getText() );
                        MainProgram.getRuntimeSymbolTable().exitScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public Token function;
		public Token returnType;
		public Token variableId;
		public Token variableType;
		public List<TerminalNode> COM() { return getTokens(pass2Parser.COM); }
		public TerminalNode TYPE() { return getToken(pass2Parser.TYPE, 0); }
		public TerminalNode OPENA() { return getToken(pass2Parser.OPENA, 0); }
		public TerminalNode COM(int i) {
			return getToken(pass2Parser.COM, i);
		}
		public List<FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public TerminalNode CLOSEA() { return getToken(pass2Parser.CLOSEA, 0); }
		public TerminalNode OPENP() { return getToken(pass2Parser.OPENP, 0); }
		public TerminalNode ID() { return getToken(pass2Parser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(pass2Parser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DOTS() { return getToken(pass2Parser.DOTS, 0); }
		public TerminalNode CLOSEP() { return getToken(pass2Parser.CLOSEP, 0); }
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).exitFeature(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		int _la;
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
//				System.out.println("3");
				setState(64); ((FeatureContext)_localctx).function = match(ID);
//				System.out.println("new function!");
                                nameFunction = ((FeatureContext)_localctx).function.getText();
                                MainProgram.getRuntimeSymbolTable().enterFunction(nameFunction  );
				setState(66); match(OPENP);
				setState(75);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(67); formal();
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COM) {
						{
						{
						setState(68); match(COM);
						setState(69); formal();
						}
						}
						setState(74);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(77); match(CLOSEP);
				setState(78); match(DOTS);
				setState(79); ((FeatureContext)_localctx).returnType = match(TYPE);
				setState(80); match(OPENA);
				setState(81); 
                                String returnTyp = ((FeatureContext)_localctx).returnType.getText();
                                if(returnTyp.equals("SELF_TYPE"))
                                	returnTyp=className;
                                String returnTypeFunction= expr().type;
                                if(returnTyp.equals("SELF_TYPE"))
                                    returnTyp = className;
                                
                                 if(!MainProgram.matchTypesInAssign(returnTyp, returnTypeFunction)){
                                	if(((FeatureContext)_localctx).returnType.getText().equals("Bool") || ((FeatureContext)_localctx).returnType.getText().equals("Object"))
                                		Alert.info("return type is match in function "+ nameFunction);
                                	else
                                		Alert.error("return type in function doesn't match with defined return type", ((FeatureContext)_localctx).returnType);
                                }else{
                                    Alert.info("return type is match in function "+ nameFunction);
                                }
                                
				setState(82); match(CLOSEA);
//				System.out.println(((FeatureContext)_localctx).function.getText()+"(...) : "+((FeatureContext)_localctx).returnType.getText());
                                MainProgram.getRuntimeSymbolTable().exitScope();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
//				System.out.println("4");
				setState(86); ((FeatureContext)_localctx).variableId = match(ID);
				setState(87); match(DOTS);
				setState(88); ((FeatureContext)_localctx).variableType = match(TYPE);
				setState(91);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(89); match(ASSIGN);
					setState(90); String variableReturntype = expr().type;
					//Symbol sym = MainProgram.getRuntimeSymbolTable().lookupVariable(variableReturntype);
						String varTyp = ((FeatureContext)_localctx).variableType.getText();
						if(varTyp.equals("SELF_TYPE"))
							varTyp = className;
						if(  !MainProgram.matchTypesInAssign(varTyp , variableReturntype)){
							Alert.error("Types of both side of assignment aren't compatible!", ((FeatureContext)_localctx).variableId);
						}else {
                       
							Alert.info("Types of both side of assignment are compatible!");
						}
					}
				}

//				System.out.println(((FeatureContext)_localctx).variableId.getText()+" : "+((FeatureContext)_localctx).variableType.getText());
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public Token inputId;
		public Token inputType;
		public TerminalNode ID() { return getToken(pass2Parser.ID, 0); }
		public TerminalNode DOTS() { return getToken(pass2Parser.DOTS, 0); }
		public TerminalNode TYPE() { return getToken(pass2Parser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).enterFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).exitFormal(this);
		}
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
//			System.out.println("5");
			setState(97); ((FormalContext)_localctx).inputId = match(ID);
			setState(98); match(DOTS);
			setState(99); ((FormalContext)_localctx).inputType = match(TYPE);
//			System.out.println(((FormalContext)_localctx).inputId.getText()+" : "+((FormalContext)_localctx).inputType.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String type=null;
                public Token leftHand;
		public Token functionName;
		public Token letId1;
		public Token letType1;
		public Token letIdn;
		public Token letTypen;
		public Token caseId;
		public Token caseType;
		public Token newType;
		public TerminalNode END_CASE() { return getToken(pass2Parser.END_CASE, 0); }
		public TerminalNode ELSE() { return getToken(pass2Parser.ELSE, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> TYPE() { return getTokens(pass2Parser.TYPE); }
		public TerminalNode END_IF() { return getToken(pass2Parser.END_IF, 0); }
		public TerminalNode ID(int i) {
			return getToken(pass2Parser.ID, i);
		}
		public TerminalNode COM(int i) {
			return getToken(pass2Parser.COM, i);
		}
		public List<TerminalNode> BIGER_EQUAL() { return getTokens(pass2Parser.BIGER_EQUAL); }
		public TerminalNode BIGER_EQUAL(int i) {
			return getToken(pass2Parser.BIGER_EQUAL, i);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(pass2Parser.ID); }
		public TerminalNode OPENP() { return getToken(pass2Parser.OPENP, 0); }
		public TerminalNode ASSIGN(int i) {
			return getToken(pass2Parser.ASSIGN, i);
		}
		public List<TerminalNode> DOTS() { return getTokens(pass2Parser.DOTS); }
		public TerminalNode OF() { return getToken(pass2Parser.OF, 0); }
		public TerminalNode SEM(int i) {
			return getToken(pass2Parser.SEM, i);
		}
		public TerminalNode START_CASE() { return getToken(pass2Parser.START_CASE, 0); }
		public TerminalNode END_LOOP() { return getToken(pass2Parser.END_LOOP, 0); }
		public TerminalNode START_LOOP() { return getToken(pass2Parser.START_LOOP, 0); }
		public List<TerminalNode> COM() { return getTokens(pass2Parser.COM); }
		public TerminalNode THEN() { return getToken(pass2Parser.THEN, 0); }
		public TerminalNode OPENA() { return getToken(pass2Parser.OPENA, 0); }
		public TerminalNode TYPE(int i) {
			return getToken(pass2Parser.TYPE, i);
		}
		public TerminalNode WHILE() { return getToken(pass2Parser.WHILE, 0); }
		public TerminalNode NEW() { return getToken(pass2Parser.NEW, 0); }
		public TerminalNode IN() { return getToken(pass2Parser.IN, 0); }
		public TerminalNode CLOSEA() { return getToken(pass2Parser.CLOSEA, 0); }
		public List<TerminalNode> ASSIGN() { return getTokens(pass2Parser.ASSIGN); }
		public TerminalNode START_IF() { return getToken(pass2Parser.START_IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public List<TerminalNode> SEM() { return getTokens(pass2Parser.SEM); }
		public TerminalNode DOTS(int i) {
			return getToken(pass2Parser.DOTS, i);
		}
		public TerminalNode CLOSEP() { return getToken(pass2Parser.CLOSEP, 0); }
		public TerminalNode LET() { return getToken(pass2Parser.LET, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass2Listener ) ((pass2Listener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr);
		int _la;
		try {
			setState(214);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); ((ExprContext)_localctx).leftHand = match(ID);
                                
                                String desVar = ((ExprContext)_localctx).leftHand.getText();
                                Symbol sym = MainProgram.getRuntimeSymbolTable().lookupVariable(desVar);
                                if(sym== null){
                                    Alert.error("The variable is undefined", ((ExprContext)_localctx).leftHand);
                                }
//				System.out.println("assign expresion\t" + ((ExprContext)_localctx).leftHand.getText() );
				setState(104); match(ASSIGN);
//				System.out.println("assign right hand");
				setState(106); 
                                ExprContext returnType =expr();
                                
                                //if(sym!=null &&( sym instanceof Symbol) && !sym.getType().equals(returnType.type) ){
                                if(sym!=null &&( sym instanceof Symbol) &&  !MainProgram.matchTypesInAssign(sym.getType(), returnType.type) ){
                                	 Alert.error("Types of both side of assignment aren't compatible!", ((ExprContext)_localctx).leftHand);
                                }else if( sym!=null && MainProgram.matchTypesInAssign(sym.getType(), returnType.type) ){
                                    _localctx.type = returnType.type;
                                    Alert.info("Types of both side of assignment are compatible!");
                                }
//				System.out.println("after expression");
                                
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
//				System.out.println("function call");
				setState(110); ((ExprContext)_localctx).functionName = match(ID);
				setState(111); match(OPENP);
				setState(122);
				_la = _input.LA(1);
                                ArrayList<String> funcArguments = new ArrayList<>();
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << LET) | (1L << SUB) | (1L << TRUE) | (1L << FALSE) | (1L << OPENP) | (1L << NOT_FLAG) | (1L << NOT) | (1L << ISVOID) | (1L << NEW) | (1L << START_CASE) | (1L << WHILE) | (1L << START_IF) | (1L << OPENA) | (1L << STRING) | (1L << ID))) != 0)) {
					{
//					System.out.println("first argument");
					setState(113);
                                        
                                        ExprContext tempArgument = expr();
                                        funcArguments.add(tempArgument.type); 
                                        
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COM) {
						{
						{
						setState(114); match(COM);
//						System.out.println("all argument");
						setState(116); 
                                                tempArgument = expr();
                                                funcArguments.add(tempArgument.type);
						}
						}
						setState(121);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}
                                String funcName = ((ExprContext)_localctx).functionName.getText();
                                SymbolTable funcSymTable = MainProgram.getRuntimeSymbolTable().lookupFunction(funcName);
                                if(funcSymTable==null){
                                    Alert.error("Function doesn't exist", ((ExprContext)_localctx).functionName);
                                    _localctx.type="ERROR";
                                }else{
                                    if( !MainProgram.argumentCheck(funcArguments, className, funcName) ){
                                        Alert.error("Arguments of function didn't match!", ((ExprContext)_localctx).functionName );
                                        _localctx.type ="ERROR";
                                    }else{
                                        Alert.info("function called properly");
                                        _localctx.type=MainProgram.returnTypeFunction(className, funcName);
                                    }
                                    
                                }
				setState(124); match(CLOSEP);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125); match(START_IF);
				setState(126); 
                                String conditionIf = expr().type;
                                if(!conditionIf.equals("Bool")){
                                    Alert.error("condition expression in if: expected to be Bool but found "+ conditionIf);
                                }
//				System.out.println("condition in if");
				setState(128); match(THEN);
//				System.out.println("if expresion");
				setState(130); 
                                String ifBody =expr().type;
//				System.out.println("end if expresion");
				setState(132); match(ELSE);
//				System.out.println("else expresion");
				setState(134); 
                                String elseBody =expr().type;
//				System.out.println("end else expresion");
				setState(136); match(END_IF);

                                _localctx.type = InheritanceGraph.getIfReturnType(conditionIf, ifBody, elseBody);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(138); match(WHILE);
				setState(139);
                                String ty= expr().type;
                                if(!ty.equals("Bool")){
                                    Alert.error("condition expression in while: expected to be Bool but found "+ ty);
                                }
//				System.out.println("condition in while");
				setState(141); match(START_LOOP);
//				System.out.println("while body started");
				setState(143); expr();
//				System.out.println("while body finished");
                                _localctx.type = "Object";
				setState(145); match(END_LOOP);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(147); match(OPENA);
//				System.out.println("new block created");
                                    MainProgram.getRuntimeSymbolTable().enterBlock();
				setState(152); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(149); 
                                        _localctx.type = expr().type;
					setState(150); match(SEM);
					}
					}
					setState(154); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << LET) | (1L << SUB) | (1L << TRUE) | (1L << FALSE) | (1L << OPENP) | (1L << NOT_FLAG) | (1L << NOT) | (1L << ISVOID) | (1L << NEW) | (1L << START_CASE) | (1L << WHILE) | (1L << START_IF) | (1L << OPENA) | (1L << STRING) | (1L << ID))) != 0) );
				setState(156); match(CLOSEA);
//				System.out.println("new block closed");
                                MainProgram.getRuntimeSymbolTable().exitScope();
				}
				break;

			case 6:///////let 
				enterOuterAlt(_localctx, 6);
				{
//				System.out.println("let command");
				setState(160); match(LET);
                                MainProgram.getRuntimeSymbolTable().enterLet();
				setState(161); ((ExprContext)_localctx).letId1 = match(ID);
                                String letId = ((ExprContext)_localctx).letId1.getText();
                                
				setState(162); match(DOTS);
				setState(163); ((ExprContext)_localctx).letType1 = match(TYPE);
                                String letType = ((ExprContext)_localctx).letType1.getText();
                                if(letType.equals("SELF_TYPE"))
                                	letType = className;
                                if( letId.equals("self") ){
                                    Alert.error("variable name cann't be named: self", ((ExprContext)_localctx).letId1);
                                }else{
                                    if(!MainProgram.MainSymbolTable.getHashtable().containsKey(letType)){
                                        Alert.error("type doesn't exit", ((ExprContext)_localctx).letType1 );
                                        letType="ERROR";
                                    }
                                    Symbol temp = new Symbol(letId, Kind.variable, letType);
                                    MainProgram.getRuntimeSymbolTable().addVariableToCurrentSymbolTable(temp);    
                                    
                                }
                                
                                
				setState(168);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(164); match(ASSIGN);
					setState(165); 
                                        String returntype =expr().type;
                                        if( !MainProgram.matchTypesInAssign(letType, returntype) ){
                                            Alert.error("both side of assignment must be equal. assignment must be "+letType+" but found "+" "+returntype, ((ExprContext)_localctx).letType1);
                                        }
//					System.out.println("initial for letid1");
					}
				}
                                
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COM) {
					{
					{
					setState(170); match(COM);
                                        MainProgram.getRuntimeSymbolTable().enterLet();
					setState(171); ((ExprContext)_localctx).letIdn = match(ID);
                                        letId = ((ExprContext)_localctx).letIdn.getText();
					setState(172); match(DOTS);
					setState(173); ((ExprContext)_localctx).letTypen = match(TYPE);
                                        letType = ((ExprContext)_localctx).letTypen.getText();
                                        if( letType.equals("SELF_TYPE"))
                                        	letType = className;
                                        if( letId.equals("self") ){
                                            Alert.error("variable name cann't be named: self", ((ExprContext)_localctx).letIdn);
                                        }else{
                                            if(!MainProgram.MainSymbolTable.getHashtable().containsKey(letType)){
                                                Alert.error("type doesn't exit", ((ExprContext)_localctx).letTypen );
                                                letType="ERROR";
                                            }
                                            Symbol temp = new Symbol(letId, Kind.variable, letType);
                                            MainProgram.getRuntimeSymbolTable().addVariableToCurrentSymbolTable(temp);    
